# observius

./: .dockerignore  .env.example  .gitignore  .local_tasks.json  CLAUDE.md  LICENSE  Makefile  README.md  demo.py  demo_dashboard.py  demo_record.py  desktop_real_test.py  docker-compose.yml  form_test.html  process4_test.py  pyproject.toml  short_demo.py  workflow2_redo.py  workflow2_test.py  workflow3_test.py  workflow_context.py  workflow_desktop.py
api/: config.py  dependencies.py  local_bridge.py  main.py  requirements.txt
dashboard/: DEPLOY_VERCEL.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
e2e_tests/: run_all.py  test_1_enrichment.py  test_2_cost_tracking.py  test_3_budget_breaker.py  test_4_verification.py  test_5_full_pipeline.py  test_6_click_chain.py  test_7_interrupt_safety.py
examples/: example_data_extraction.py  example_form_submission.py  example_login.py  example_quickstart.py  extract_pricing.py  fill_form.py  monitor_competitors.py  stagehand_example.py
infra/: DEPLOY.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker  TODO-DEPLOY-API.md  TODO-DEPLOY-DASHBOARD.md  TODO-DEPLOY-E2E.md  TODO-DEPLOY-LINKS.md  docker-compose.prod.yml  railway-cron.toml  railway-dashboard.toml  railway-worker.toml  (+2 more)
sdk/: CONTRIBUTING.md  README.md  TODO-A3.md  TODO-AR1.md  TODO-AR2.md  TODO-AR3.md  TODO-AR4.md  TODO-AR5.md  TODO-FIX.md  __init__.py  client.py  models.py  pyproject.toml
sdk/computeruse/: __init__.py  _reporting.py  alerts.py  analyzer.py  browser_manager.py  client.py  compiler.py  config.py  dashboard.py  desktop.py  exceptions.py  executor.py  failure_analyzer.py  models.py  recovery_router.py  replay_executor.py  retry.py  retry_memory.py  session_manager.py  stagehand.py  track.py  tracker.py  validator.py  wrap.py
sdk/computeruse/cli/: main.py
sdk/computeruse/static/: index.html
sdk/computeruse/templates/: replay.html
sdk/docs/: universal-integration.md
sdk/examples/: browser_use_basic.py  browser_use_configured.py  compile_workflow.py  desktop_claude_computer_use.py  desktop_pyautogui.py  playwright_basic.py  replay_workflow.py  view_runs.py
sdk/examples/curl/: ingest-example.sh
sdk/examples/go/: reporter.go
sdk/examples/typescript/: observius-reporter.ts  stagehand-with-observius.ts
sdk/replays/: 3bcf64c5-36e1-4d91-b749-c0b66084a0bb.json  8894c937-5dd3-4d96-a5a2-f7e6f3a64591.json  c26c4034-b470-409f-877f-772c575238a5.json  ca203c31-9916-4125-980b-49d8b9c346be.json  eded9e5a-5ea0-43be-ad61-119dd0ba26e7.json
sdk/tests/: test_adaptive_retry.py  test_analyzer.py  test_cli_commands.py  test_dashboard.py  test_failure_analyzer.py  test_integration.py  test_recovery_router.py  test_reporting.py  test_retry_memory.py  test_track.py  test_wrap.py
(+214 files in other folders)
