[project]
name = "observius-monorepo"
version = "0.1.0"
description = "Observius monorepo - one API to automate any browser workflow"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"tests/unit/test_models.py" = ["E402"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
