[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computeruse"
version = "0.1.0"
description = "Python SDK for ComputerUse.dev browser automation"
requires-python = ">=3.11"
dependencies = ["httpx>=0.25"]

[project.urls]
Homepage = "https://computeruse.dev"
