[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computeruse"
version = "0.1.0"
description = "Python SDK for ComputerUse.dev browser automation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "browser-use>=1.0.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Homepage = "https://computeruse.dev"

[project.scripts]
computeruse = "computeruse.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["computeruse*"]
