[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pokant"
version = "0.2.0"
description = "Python SDK for Pokant browser automation"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "browser-use>=0.12.0",
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dashboard = ["fastapi>=0.100", "uvicorn>=0.24"]
stagehand = ["stagehand>=3.0.0"]

[project.urls]
Homepage = "https://pokant.dev"

[project.scripts]
computeruse = "computeruse.cli.main:cli"
pokant = "computeruse.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["computeruse*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.package-data]
computeruse = ["templates/*.html", "templates/*.css", "static/*.html"]
